; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_memory.c_free_pte_range.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_memory.c_free_pte_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mmu_gather = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mmu_gather*, i32*, i64)* @free_pte_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_pte_range(%struct.mmu_gather* %0, i32* %1, i64 %2) #0 {
  %4 = alloca %struct.mmu_gather*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.mmu_gather* %0, %struct.mmu_gather** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @pmd_pgtable(i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @pmd_clear(i32* %11)
  %13 = load %struct.mmu_gather*, %struct.mmu_gather** %4, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load i64, i64* %6, align 8
  %16 = call i32 @pte_free_tlb(%struct.mmu_gather* %13, i32 %14, i64 %15)
  %17 = load %struct.mmu_gather*, %struct.mmu_gather** %4, align 8
  %18 = getelementptr inbounds %struct.mmu_gather, %struct.mmu_gather* %17, i32 0, i32 0
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %20, align 4
  ret void
}

declare dso_local i32 @pmd_pgtable(i32) #1

declare dso_local i32 @pmd_clear(i32*) #1

declare dso_local i32 @pte_free_tlb(%struct.mmu_gather*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
